Added User Profile Use Case
Added DM Use Case

Fixed numbering on old use cases

--- a/requirements/usecase/registration.html
+++ b/requirements/usecase/registration.html
@@ -31,15 +31,15 @@
         <li>
             3a. User entered an existing username/account into the form
             <ol style="list-style-type: none;">
-                <li>2a1. Do not generate a new user account</li>
-                <li>2a2. Return the registration page view with a note about the username/email being already taken.
+                <li>3a1. Do not generate a new user account</li>
+                <li>3a2. Return the registration page view with a note about the username/email being already taken.
                 </li>
             </ol>
             <br/>
             3b. User entered an insecure password (< 8 characters long)
             <ol style="list-style-type: none;">
-                <li>4a1. Refuse to generate new user account.</li>
-                <li>4a2. Return the registration page view with a note about the required minimum length of password
+                <li>3b1. Refuse to generate new user account.</li>
+                <li>3b2. Return the registration page view with a note about the required minimum length of password
                 </li>
             </ol>
         </li>
