--- a/requirements/usecase/subscription_notification.html
+++ b/requirements/usecase/subscription_notification.html
@@ -35,6 +35,22 @@
         <li>Author is redirected to the published post</li>
     </ol>
 </blockquote>
+<blockquote>
+    <ol style="list-style-type: none;">
+        <li>
+            1a. User clicks the "subscribe" button under a thread or a post, which is already subscribed by user.
+            <ol style="list-style-type: none;">
+                <li>1a1. A pop-up notification notifies user that he/she has already subscribed the thread or the post.</li>
+		        <li>1a2. Refuse to subscribe the thread or the post again.</li>
+            </ol>
+	    <br/>
+	    1b. User clicks the "unsubscribe" button under a thread or a post, which hasn't subscribed by the user yet.
+	    <ol style="list-style-type: none;">
+	    	<li>1b1. A pop-up notification notifies user that he/she has not subscribed the thread or the post. </li>
+		    <li>1b2. Refuse to unsubscribe the thread or the post.</li>
+        </li>
+    </ol>
+</blockquote>
 <img style="margin: 0 auto; display: block;" src="Subscription_Notification.png"/>
 </body>
 </html>
