--- a/requirements/usecase/subscription_notification.html
+++ b/requirements/usecase/subscription_notification.html
@@ -12,7 +12,7 @@
 <blockquote>
     <p>User - wants to subscribe or unsubscribe to threads and posts.
     </p>
-    <p>User - wants to know whether a post is successfully posted on the subscription thread or not
+    <p>User - wants to know whether a post is successfully posted on the subscribed thread or not
     </p>
 </blockquote>
 <p><strong>Precondition:</strong> User is logged into the platform.<br>
@@ -31,7 +31,6 @@
         <li>Subscription data is passed to the backend, where the user profile is stored.</li>
         <li>User makes a post on the subscribed thread.</li>
         <li>A notification appears to show that user has successfully posted a post on the subscribed thread.</li>
-        <li></li>
         <li>Author is redirected to the published post</li>
     </ol>
 </blockquote>
