Moving Subscription UML into diagrams folder

--- a/requirements/usecase/subscription_notification.html
+++ b/requirements/usecase/subscription_notification.html
@@ -10,10 +10,7 @@
     <strong>Stakeholders and Interests:</strong>
 </p>
 <blockquote>
-    <p>User - wants to subscribe or unsubscribe to threads and posts.
-    </p>
-    <p>User - wants to know whether a post is successfully posted on the subscription thread or not
-    </p>
+    <p>User - wants to subscribe or unsubscribe to threads and posts and wants to know whether a post is successfully posted on the subscription thread or not</p>
 </blockquote>
 <p><strong>Precondition:</strong> User is logged into the platform.<br>
     <strong>Trigger:</strong>
