--- a/requirements/usecase/loginUserCase.html
+++ b/requirements/usecase/loginUserCase.html
@@ -11,16 +11,15 @@
 <blockquote>
 <p>User - wants to access the platform via a login form.</p>
 </blockquote>
-<p><strong>Precondition:</strong> User should have an already registered account.<br>
+<p><strong>Precondition:</strong> User should not be already logged in.<br>
 <strong>Trigger:</strong> User click "login" button on login form.<br>
 <strong>Main success scenario:</strong>  </p>
 <blockquote>
 <ol>
-<li>User inputs a valid and distinct username and password.</li>
+<li>User must have a distinct username and password.</li>
 <li>User click the "login" button.</li>
-<li>The users data is passed to the backend and then granted access to the platform.</li>
-<li>User has full access to main platform to continue other actions.</li>
-<li>User repeats 1 & 2 everytime they want to login.</li>
+<li>The users will be able to login with acceptable login information.</li>
+<li>User is redirected to the Post viewing page or thier User Profile if login is successful.</li>
 </ol>
 </blockquote>
 <p><strong>Extensions:</strong></p>
@@ -30,7 +29,7 @@
 <ol style="list-style-type: none;">
 <li>3a1. SuD does not recognize users information.</li>
 <li>3a2. SuD rejects users information.</li>
-<li>3a3. User is prompted to create/register a new account.</li>
+<li>3a3. By means of a notice displayed on the login form, the user is notified about unsuccessful login.</li>
 <li>3a4. User clicks the "not registered" button to register new account.<li>
 </li>3a5. "Not Registered" button initiates <em>Registration</em> use case.</li>
 </blockquote>
