--- a/requirements/usecase/CreatePostUseCase.html
+++ b/requirements/usecase/CreatePostUseCase.html
@@ -17,20 +17,14 @@
 <blockquote>
 <ol>
 <li>Verified users click the "New Post" button in the main top navigation bar.</li>
-<li>User types up intented post in the textbox.</li>
-<li>User selects available formatting tools, as desired.</li>
-<li>User selects a prefered discussion group to make post avialable to, with the disscusion group defaulting to "None".</li>
-<li>User clicks the "Post" botton to display/submit new post on the platform.</li>
-<li>Data is passed to the backend, where the post is created.</li>
+<li>The user is directed to the "Post Editor" when "New Post" button is click.</li>
 </ol>
 </blockquote>
 <p><strong>Extensions:</strong></p>
 <blockquote>
 <ol style="list-style-type: none;">
-<li>5a. User submits an empty post:
+<li>There are no Extensions for this Use case
 <ol style="list-style-type: none;">
-<li>2a1. Empty post is rejected.</li>
-<li>2a2. Returns to "New Post" page with a prompt stating the post cannot be empty.</li>
 </blockquote>
 </body>
 </html>
