--- a/requirements/usecase/PostViewingUseCase.html
+++ b/requirements/usecase/PostViewingUseCase.html
@@ -6,35 +6,26 @@
 </head>
 <body>
 <p><strong>Title:</strong> <strong>Post Viewing</strong><br>
-<strong>Primary Actor:</strong> Author<br>
+<strong>Primary Actor:</strong> User <br>
 <strong>Stakeholders and Interests:</strong>  </p>
 <blockquote>
-<p>Author - wants to see and access a post to edit.</p>
+<p>User - wants to see and access a post to edit.</p>
 </blockquote>
-<p><strong>Precondition:</strong> Author must be logged into the platform.<br>
-<strong>Trigger:</strong> Author must click the "edit post" button.<br>
+<p><strong>Precondition:</strong> User must be logged into the platform.<br>
+<strong>Trigger:</strong> User must click the "edit post" button.<br>
 <strong>Main success scenario:</strong>  </p>
 <blockquote>
 <ol>
-<li>Author must be on the post viewing page to see and access post.</li>
-<li>Author can click the "edit post" button to add or remove content.</li>
-<li>Autor is redirected to the "new post" page to edit the post.</li>
-<li>"New post" button initoates<em>Create Post</em> use case.</li>
-<li>Autor can access the formatting tools as desired for editing post.</li>
-<li>User selects a prefered discussion group to make post avialable to, with the disscusion group defaulting to "None".</li>
-<li>User clicks the "Post" botton to display/submit edited post on the platform.</li>
-<li>Data is passed to the backend, where the edited post is created.</li>
-<li>Non-Authors can access this post and rate it out of 5 points.</li>
+<li>User must be on the post viewing page to see and access post.</li>
+<li>Author of the post can only access the functionality to edit post via the Post viewing page.</li>
+<li>Non-Authors can rate a post on the "Post viewing page" out of 5 points.</li>
 </ol>
 </blockquote>
 <p><strong>Extensions:</strong></p>
 <blockquote>
 <ol style="list-style-type: none;">
-<li>2a. User is not the Author of the post:
+<li>2a. The functionality to edit a post is only made available on the post viewing page:
 <ol style="list-style-type: none;">
-<li>2a1. User is prompted on the post cannot be edited if it was not created by user.</li>
-<li>2a2. User is redirected to the "new post" page.</li>
-<li>2a3. New post initiates <em>Create Post</em> use case</li>
 </blockquote>
 </body>
 </html>
