--- a/requirements/requirements.html
+++ b/requirements/requirements.html
@@ -18,7 +18,7 @@
                             <p class=rqvali>User Login Use Case</p>
                             <p class=rqveri>Log into the system.</p>
                         </li>
-                          <li>Users can register an account
+                        <li>Users can register an account - demo
                             <ol>
                               <li>Users can register an account [MUST]
                                   <p class=rqdesc>User can fill in a form, containing username, email and password as fields, in order to become
