--- a/documentation/2- requirements/usecase/subscription_notification.html
+++ b/documentation/2- requirements/usecase/subscription_notification.html
@@ -48,6 +48,6 @@
         </li>
     </ol>
 </blockquote>
-<img style="margin: 0 auto; display: block;" src="Subscription_Notification.png"/>
+<img style="..." src="diagrams/Subscription_Notification.png"/>
 </body>
 </html>
